# TPOpenCV

./: README.md
src/: CMakeLists.txt  Gaussian.cpp  Gaussian.h  main.cpp
